--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
         <main>
           <section class="counter">
             <h2 class="counter__text">Showing X out of Y completed</h2>
+            <!-- html placeholder -->
+          <p class="todo-counter"></p>
           </section>
           <section class="todos">
             <ul class="todos__list">
